# mds-provider-api

./: .cloudignore  .env.example  .gitignore  API_ACCESS.md  API_KEYS_SUMMARY.md  DATA_PIPELINE_SETUP.md  Dockerfile  README.md  cloudbuild.yaml  create_validation_doc.py  docker-compose.yml  extract_schemas.py  main.py  pyproject.toml  requirements.txt  test_api.sh  validate_mds_2.0.py
app/: __init__.py  config.py  main.py
app/auth/: __init__.py  api_key_handler.py  jwt_handler.py  middleware.py
app/endpoints/: __init__.py  admin.py  events.py  telemetry.py  trips.py  vehicles.py
app/middleware/: __init__.py  concurrency.py
app/models/: __init__.py  common.py  events.py  telemetry.py  trips.py  vehicles.py
app/monitoring/: __init__.py  data_quality.py
app/services/: __init__.py  bigquery.py  transformers.py
scripts/: create_validation_doc.py  extract_schemas.py  validate_mds_2.0.py
tests/: __init__.py  conftest.py  test_auth.py  test_data_quality.py  test_great_expectations.py  test_transformers.py  test_trips.py  test_vehicles.py
