[project]
name = "mds-provider-api"
version = "0.1.0"
author = "Jonathan Deiloff"
description = "It offers last mile delivery robots data following MDS specs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio-redis==0.16.0",
    "black==23.11.0",
    "cryptography>=41.0.8",
    "fastapi==0.104.1",
    "flake8==6.1.0",
    "google-auth==2.25.2",
    "google-cloud-bigquery==3.13.0",
    "google-cloud-core==2.4.1",
    "gunicorn==21.2.0",
    "httpx==0.25.2",
    "isort==5.12.0",
    "jsonschema>=4.25.1",
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.8",
    "mypy==1.7.1",
    "numpy>=1.24.4,<2",
    "pandas>=2.1.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyjwt[crypto]==2.8.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "requests==2.31.0",
    "structlog==23.2.0",
    "uvicorn[standard]==0.24.0",
]
